--- a/todo
+++ b/todo
@@ -31,7 +31,7 @@ General
 
 ------------------------------------------------------------
 (X) Enhance view calculation - such as % video watched		JOHN
-(_) Setup mail support
+(_) Setup mail support              NEED TO BE IMPROVED
 (_) Search by title, description
 (_) General search by all types
 (_) Create admin tools to combine keywords, journals, and authors
